<resources>
    <string name="app_name">mvp_noteapp</string>
    <string name="mvpNote">Mvp Note</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title…</string>
    <string name="description">Description...</string>
    <string name="save">Save</string>
    <string name="categorise">Categorise:</string>
    <string name="priority">Priority:</string>
    <string name="title_text_user">title text user</string>
    <string name="description_text_user">description text user</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="healthy">HEALTHY</string>
    <string name="learning">LERNING</string>
    <string name="work">WORK</string>
    <string name="home">HOME</string>
    <string name="high">HIGH</string>
    <string name="low">LOW</string>
    <string name="normal">NORMAL</string>
</resources>