<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.NoteFragment" >

<!--    close image btn-->
    <ImageView
        android:id="@+id/img_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:rotation="50"
        android:src="@drawable/add_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        app:tint="@color/purple_700" />

<!--    edit text title-->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:padding="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_close">

        <!--edit text-->
        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:text=""
            tools:ignore="Autofill,VisualLintTextFieldSize,TouchTargetSizeCheck" />
    </androidx.cardview.widget.CardView>


    <!--    edit text description-->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_dec"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:padding="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_title">

        <!--edit text-->
        <EditText
            android:id="@+id/edt_dec"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/description"
            android:inputType="textPersonName"
            android:text=""
            tools:ignore="Autofill,VisualLintTextFieldSize" />
    </androidx.cardview.widget.CardView>

<!--    categorise layout-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="10dp"
        android:layout_margin="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_dec"
        android:id="@+id/constraint_layout_categorise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<!--        categorise text and spinner-->
        <TextView
            android:id="@+id/txt_categorise"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="25sp"
            android:text="@string/categorise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />

        <androidx.cardview.widget.CardView
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/card_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RtlHardcoded">

            <Spinner
                android:id="@+id/spinner_categorise"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:padding="5dp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <!--    priority layout-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="10dp"
        android:layout_margin="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_layout_categorise"
        android:id="@+id/constraint_layout_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--        priority text and spinner-->
        <TextView
            android:id="@+id/txt_priority"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="25sp"
            android:text="@string/priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />

        <androidx.cardview.widget.CardView
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/card_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RtlHardcoded">

            <Spinner
                android:id="@+id/spinner_priority"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:padding="5dp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    button save-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="70dp"
        android:backgroundTint="@color/bg_btn"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/save"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint_layout_priority"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />



</androidx.constraintlayout.widget.ConstraintLayout>